--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,77 +1,77 @@
 - title: "My GitHub"
-  link: "https://github.com/reticivis-net"
+  link: "https://github.com/machineonamission"
   image_url: "assets/github.png"
   image_alt: "🐙"
   content: "My GitHub profile and repositories, where all the source code of my projects lives."
 
 - title: "MediaForge"
-  link: "https://github.com/reticivis-net/mediaforge"
+  link: "https://github.com/machineonamission/mediaforge"
   image_url: "assets/roundmediaforge.png"
   image_alt: "🔨"
   content: "A powerful Discord bot for editing and creating videos, images, GIFs, and more!"
 
 - title: "UWD2"
-  link: "https://github.com/reticivis-net/uwd2"
+  link: "https://github.com/machineonamission/uwd2"
   image_url: "assets/uwd2.svg"
   image_alt: "🌐"
   content: "A program that removes the watermark in the corner of Windows insider builds."
 
 - title: "Win Global GPU"
-  link: "https://github.com/reticivis-net/win_global_gpu"
+  link: "https://github.com/machineonamission/win_global_gpu"
   image_url: "assets/win_global_gpu.svg"
   image_alt: "🖥️"
   content: "A Windows program that sets your preferred GPU globally, manually or automatically."
 
 - title: "Evergreen"
-  link: "https://github.com/reticivis-net/evergreen"
+  link: "https://github.com/machineonamission/evergreen"
   image_url: "assets/evergreen1000.png"
   image_alt: "🌲"
   content: "A beautiful and minimalistic new tab extension."
 
 - title: "MelUtils"
-  link: "https://github.com/reticivis-net/melutils"
+  link: "https://github.com/machineonamission/melutils"
   image_url: "assets/roundmelutils.png"
   image_alt: "🔨"
   content: "A janky home-grown collection of various utility commands, primarily moderation, in a Discord bot."
 
 - title: "aidatasetfromvideo"
-  link: "https://github.com/reticivis-net/aidatasetfromvideo"
+  link: "https://github.com/machineonamission/aidatasetfromvideo"
   image_url: "assets/aidfv.png"
   image_alt: "📹"
   content: "A utility to sort and slice a captioned video into a dataset for Tacotron."
 
 - title: "Kyocera Printer Monitor"
-  link: "https://github.com/reticivis-net/kyocera-printer-monitor"
+  link: "https://github.com/machineonamission/kyocera-printer-monitor"
   image_url: "assets/print.svg"
   image_alt: "🖨️"
   content: "A highly specialized program designed to make monitoring a fleet of Kyocera printers dead easy."
 
 - title: "Melody's Lamps"
-  link: "https://github.com/reticivis-net/melodys-lamps"
+  link: "https://github.com/machineonamission/melodys-lamps"
   image_url: "assets/lamps.png"
   image_alt: "💡"
   content: "A Factorio mod that adds a fully signal-controllable RGB lamp and two very large lamps."
 
 - title: "Infineffect"
-  link: "https://github.com/reticivis-net/infineffect"
+  link: "https://github.com/machineonamission/infineffect"
   image_url: "assets/infineffect.png"
   image_alt: "🧪"
   content: "A Minecraft 1.19.2 Fabric mod that shows the real duration of long effects instead of **:**."
 
 - title: "jpegcorruption"
-  link: "https://github.com/reticivis-net/jpegcorruption"
+  link: "https://github.com/machineonamission/jpegcorruption"
   image_url: "assets/jpegcorruption.jpg"
   image_alt: "🖼️"
   content: "a Python script to generate moving glitch art by repeatedly corrupting JPEG images."
 
 - title: "S**tboard"
-  link: "https://github.com/reticivis-net/shitboard"
+  link: "https://github.com/machineonamission/shitboard"
   image_url: "assets/s__tboard.png"
   image_alt: "📌"
   content: "A \"very good\" app icon theme for jailbroken Apple devices."
 
 - title: "Wyred"
-  link: "https://github.com/reticivis-net/wyred"
+  link: "https://github.com/machineonamission/wyred"
   image_url: "assets/wyred.png"
   image_alt: "🔌"
   content: "An incomplete Unity game I made for school about boolean logic gates."
@@ -93,5 +93,3 @@
   image_url: "creature/tbh%20creature.png"
   image_alt: "🐈"
   content: "A very strange webpage."
-
-# bundle exec jekyll serve
