--- a/_data/me.yml
+++ b/_data/me.yml
@@ -26,7 +26,7 @@
   image_alt: "🧍"
   content: >
     Hello! My name is Melody, and I am the developer behind this website and all 
-    projects listed here. Contact me at 
+    projects listed here. I've also gone by Rēticīvis and Hexbugman213. Contact me at 
     <a href='mailto:me@machineonamission.me'>me@machineonamission.me</a>.
 
 - title: "What is machineonamission.me?"
@@ -37,7 +37,7 @@
     back to 1 identity/page.
 
 - title: "What is the Machine on a Mission logo?"
-  image_url: "assets/reticivis_just_logo.svg"
+  image_url: "assets/moam_just_logo.svg"
   image_alt: "♾️"
   content: >
     Designed by a friend of mine in my college's graphic design class, the logo 
