--- a/_data/me.yml
+++ b/_data/me.yml
@@ -18,8 +18,8 @@
   image_alt: "❓"
   content: >
     Machine on a Mission is a <a href='https://www.youtube.com/channel/UCqA-bpFdLWzugMIeK26UjnQ'>Machine Girl</a> 
-    lyric from the song <a href='https://www.youtube.com/watch?v=Il_51tSLadg'>Mchngrl vs Wlfgrl</a> that I feel
-    represents who I am and what I do.
+    lyric from the song <a href='https://youtu.be/Il_51tSLadg?t=124'>Mchngrl vs Wlfgrl</a> that I feel
+    represents who I am (a programmer who approaches problem solving in a very machine-like way) and what I do (single-minded focus on projects that improve people's lives).
 
 - title: "Who is Machine on a Mission?"
   image_url: "assets/person-circle-question.svg"
