--- a/_data/me.yml
+++ b/_data/me.yml
@@ -26,7 +26,7 @@
   image_alt: "🧍"
   content: >
     Hello! My name is Melody, and I am the developer behind this website and all 
-    projects listed here. I've also gone by Rēticīvis and Hexbugman213. Contact me at 
+    projects listed here. I've also gone by Rēticīvis, HexCodeFFF, Hex, and Hexbugman213. Contact me at 
     <a href='mailto:me@machineonamission.me'>me@machineonamission.me</a>.
 
 - title: "What is machineonamission.me?"
