Add link to official Discord server in me.yml

--- a/_data/me.yml
+++ b/_data/me.yml
@@ -53,6 +53,7 @@
 - title: "Official Discord Server"
   image_url: "assets/Discord-Symbol-Blurple.svg"
   image_alt: "💬"
+  link: "https://discord.gg/QhMyz3n4V7"
   content: >
     Join my official Discord server to chat about all my projects and get support!
 
