--- a/_data/me.yml
+++ b/_data/me.yml
@@ -50,7 +50,7 @@
   content: "My GitHub profile and repositories, where all the source code of my projects lives."
 
 
-- title: "Official Discord Server"
+- title: "Discord Server"
   image_url: "assets/Discord-Symbol-Blurple.svg"
   image_alt: "💬"
   link: "https://discord.gg/QhMyz3n4V7"
